chore: update actions/upload-artifact

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,9 +86,11 @@ jobs:
         if: ${{ matrix.settings.osxcross }}
         # This builds executables & sets env variables for rust to consume.
         with:
-          osx-version: '12.3'
+          osx-version: "12.3"
       - uses: goto-bus-stop/setup-zig@v2
         if: ${{ matrix.settings.zig }}
+        with:
+          version: 0.14.0-dev.1983+6bf52b050
       - name: Build in docker
         uses: addnab/docker-run-action@v3
         if: ${{ matrix.settings.docker }}
@@ -106,7 +108,7 @@ jobs:
         run: ${{ matrix.settings.build }}
         shell: bash
       - name: Upload Plugin
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ github.sha }}-${{ matrix.settings.abi }}-plugin
           path: npm/${{ matrix.settings.abi }}/index.farm
